# grafana-a2a-mcp-server

./: CHANGELOG.md  CONTRIBUTING.md  FILE_MANIFEST.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml  setup.sh
docs/: A2A_INTEGRATION.md  ARCHITECTURE.md
examples/: usage_example.py
src/grafana_mcp/: __init__.py  server.py
tests/: test_server.py
